# mindplayer

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  backlog.html  install.sh
.github/: check-commits.py  next-version.py
.github/workflows/: ci.yml  release.yml
app/: package-lock.json  package.json
app/src/: index.html  main.js  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs  pty.rs
crates/mindplayer-core/: Cargo.toml
crates/mindplayer-core/src/: audit.rs  discovery.rs  lib.rs  prompts.rs  resume.rs  session.rs  state.rs  tokens.rs
crates/mindplayer-core/tests/: scan.rs
crates/mindplayer-tui/: Cargo.toml  build.rs
crates/mindplayer-tui/src/: agent_hooks.rs  app.rs  experimental_handoff.rs  handoff.rs  kiro_patterns.rs  main.rs  mascot.rs  orchestration.rs  pty.rs  render_writer.rs  terminal_view.rs  text_input.rs  ui.rs
crates/mindplayer-tui/src/app/: handoff_sync.rs  modals.rs  orchestration_lanes.rs  orchestration_ui.rs  pane.rs  selection.rs  session_list.rs  spawn.rs  tests.rs
crates/mindplayer-tui/tests/: smoke.rs
crates/vt100-mp/: Cargo.toml
crates/vt100-mp/src/: attrs.rs  grid.rs  parser.rs  row.rs  screen.rs  term.rs
docs/plans/: 2026-07-08-usage-audit-design.md
