[workspace]
resolver = "2"
members = ["crates/mindplayer-core", "crates/mindplayer-tui"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
walkdir = "2"

[profile.release]
lto = true
strip = true
