[workspace]
resolver = "2"
members = ["crates/mindplayer-core", "crates/mindplayer-tui"]
# Vendored+patched vt100 — kept out of the member set so its upstream third-party
# code isn't held to our `clippy -D warnings` gate (it's consumed as a path dep).
exclude = ["crates/vt100-mp"]

[workspace.package]
edition = "2021"
version = "0.11.37"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
walkdir = "2"

[profile.release]
lto = true
strip = true
