[package]
name = "mindplayer-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Shared core for MindPlayer: discovery, token aggregation, state, resume command building."

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
