[package]
name = "mindplayer-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "MindPlayer terminal UI: Codex/Claude/Kiro session manager with an embedded PTY."

[[bin]]
name = "mindplayer"
path = "src/main.rs"

[dependencies]
mindplayer-core = { path = "../mindplayer-core" }
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
libc = "0.2"
anyhow.workspace = true
chrono.workspace = true
